<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presupuesto.PresupuestoFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="35dp"
        android:text="@string/presupuesto"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/etCostVuelo"
        app:layout_constraintStart_toStartOf="@+id/etCostVuelo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCostVuelo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/costoVuelo"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etCostAlojamiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/etCostAlojamiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="@string/costoAlojamiento"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etCantNoches"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCostVuelo" />

    <EditText
        android:id="@+id/etCantNoches"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/cantidadNoches"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etCostComidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCostAlojamiento" />

    <EditText
        android:id="@+id/etCostComidas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/costoComidas"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/cbTerminos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCantNoches" />

    <CheckBox
        android:id="@+id/cbTerminos"
        android:layout_width="299dp"
        android:layout_height="61dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="21dp"
        android:text="@string/terminos"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCostComidas" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="65dp"
        android:text="@string/calcular"
        app:layout_constraintBottom_toTopOf="@+id/tvResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbTerminos" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="113dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />
</androidx.constraintlayout.widget.ConstraintLayout>